Change Log for JPCRE2
--------------------

Version 10.30.02 - Mon Jul 10 14:04:27 UTC 2017
-----------------------------------------------

* Add `RegexReplace::getLastReplaceCount()`.
* Add `RegexReplace::setReplaceCounter()`.
* Add additional parameter `size_t* counter` to `MatchEvaluator::replace()` and `MatchEvaluator::nreplace()`
* Optimize ModifierTable

Version 10.30.01 - Sat Mar 11 00:08:52 UTC 2017
-----------------------------------------------

* API change.
* Make `initMatch()`a synonym for `getMatchObject()`.
* Make `initReplace()` a synonym for `getReplaceObject()`.
* Improvement to `match()` function.
* Different name for the same group is permitted (deviation from the PCRE2 spec 10.21):
* Implement move constructors and move-assignment operator.
* Guard against null pointer with well defined behavior.
* Rename confusing name `setMatchData()` to `setMatchDataBlock()`.
* Add `MatchEvaluator::resetMatchData()`
* Add `clear()` functions to each class.
* Remove `Regex::initMatchFrom()` and `Regex::initReplaceFrom()`.
* Remove `Regex::match()` and `Regex::replace()` without any argument.
* Add `ModifierTable` class for creating custom modifier tables.
* PCRE2 compatible `replace()` function to take MatchEvaluator.
* Match data re-usability by MatchEvaluator.


Version 10.29.03 - Mon Mar  6 21:55:29 UTC 2017
-----------------------------------------------

1. Add ERROR constant INSUFFICIENT_OVECTOR
2. Allow INSUFFICIENT_OVECTOR to be bypassed in `RegexMatch::match()` function.
3. Add `MatchEvaluator::match()`, and `MatchEvaluator::nreplace()`
4. Add `RegexMatch::getMatchStartOffsetVector()` and `RegexMatch::getMatchEndOffsetVector()`
5. Add `MatchEvaluator::setMatchEvaluatorCallback()`
6. Add an extra optional argument with `RegexReplace::nreplace()` to use existing match data.
7. Add `MatchEvaluator::clearMatchData()` and `MatchEvaluator::reset()`